--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,27 @@
             "homepage": "https://cartalyst.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/jupitoruiorg/assetic"
+        },
+        {
+            "type": "composer",
+            "url": "https://packages.cartalyst.com"
+        }
+    ],
     "require": {
-        "php": "^8.0",
-        "cartalyst/assetic": "^2.0",
+        "php": "^8.3",
+        "cartalyst/assetic": "^3.0",
         "cartalyst/phpsass": "^2.1",
-        "symfony/http-foundation": "^6.0"
+        "symfony/http-foundation": "^7.0"
     },
     "require-dev": {
         "cartalyst/php-cs-fixer-config": "^2.0",
-        "mockery/mockery": "^1.4.2",
-        "orchestra/testbench": "^7.0",
-        "phpunit/phpunit": "^9.3.3"
+        "mockery/mockery": "^1.0",
+        "orchestra/testbench": "^9.0",
+        "phpunit/phpunit": "^11.0"
     },
     "autoload": {
         "psr-4": {
